Fix for dark mode problems

--- a/soccer-manager/src/styles/index.scss
+++ b/soccer-manager/src/styles/index.scss
@@ -14,6 +14,7 @@ body {
 
 body:has(.dark-mode) {
   background-color: #001000;
+  color: whitesmoke;
 }
 
 .container {
